--- a/app.json
+++ b/app.json
@@ -25,6 +25,9 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "macos": {
+      "bundleIdentifier": "com.dailytodo.app"
     }
   }
 }
