--- a/package.json
+++ b/package.json
@@ -6,13 +6,28 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "macos": "expo run:macos",
+    "web": "expo start --web",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~6.1.2",
+    "@expo/vector-icons": "^15.0.3",
+    "@react-navigation/native": "^7.1.28",
+    "@react-navigation/native-stack": "^7.10.0",
+    "@tanstack/react-query": "^5.90.19",
+    "axios": "^1.13.2",
     "expo": "~54.0.31",
+    "expo-dev-client": "~6.0.20",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-safe-area-context": "^5.6.2",
+    "react-native-screens": "^4.19.0",
+    "react-native-vector-icons": "^10.3.0",
+    "react-native-web": "^0.21.0",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
